--- a/src/main/webapp/humanHeath/heartbeat.zul
+++ b/src/main/webapp/humanHeath/heartbeat.zul
@@ -1,4 +1,4 @@
-<panel xmlns:n="native" title="Heart Rate" border="normal" height="100%"
+<panel xmlns:n="native" title="心率" border="normal" height="100%"
        viewModel="@id('vm')@init('org.itri.view.humanhealth.HeartBeatView')" >
     <panelchildren>
          <bs-row>
