--- a/src/main/webapp/WEB-INF/template/personInfoBox.zul
+++ b/src/main/webapp/WEB-INF/template/personInfoBox.zul
@@ -32,7 +32,8 @@
             </div>
              <div class="col-3 text-left px-4">
                 <h2>
-                	<i class="${statutIcon} text-black-50 h3"/>
+                	
+                	<image src="${statutIcon}" />
                 </h2>
             </div>
             
