--- a/src/main/webapp/floor/floorSummary.zul
+++ b/src/main/webapp/floor/floorSummary.zul
@@ -1,27 +1,35 @@
 <zk xmlns="native" xmlns:z="zul">
-	 <div class="col-12 px-4">
+	 <div class="col-12 text-center px-4">
 	 
 		<h5>2F</h5>
 		<h5>樓層健康狀態</h5>
-		<div class="row">
+		
+		<!-- Normal Status -->
+		<div class="row px-4">
 			<image src="/cdc-hospital-bed/resources/image/MapImages/icon_indicator_g_02.png"/>
-			<h7>正常</h7>	
-			<h7>25/29</h7>	
+			<h7 class="px-1">正常</h7>	
+			<h7 class="text-right">25/29</h7>	
 		</div>
-		<div class="row">
+		
+		<!-- Warning Status -->
+		<div class="row px-4">
 			<image src="/cdc-hospital-bed/resources/image/MapImages/icon_indicator_y_02.png"/>
-			<h7>警示</h7>
-			<h7>3</h7>	
+			<h7 class="px-1">警示</h7>
+			<h7 class="text-right">3</h7>	
 		</div>
-		<div class="row">
+		
+		<!-- Urgent Status -->
+		<div class="row px-4">
 			<image src="/cdc-hospital-bed/resources/image/MapImages/icon_indicator_r_02.png"/>
-			<h7>警急狀況</h7>
-			<h7>1</h7>	
+			<h7 class="px-1">警急狀況</h7>
+			<h7 class="text-right">1</h7>	
 		</div>
-		<div class="row">
+		
+		<!-- Empty Status -->
+		<div class="row px-4">
 			<image src="/cdc-hospital-bed/resources/image/MapImages/icon_indicator_no_02.png"/>
-			<h7>空床</h7>
-			<h7>0</h7>	
+			<h7 class="px-1">空床</h7>
+			<h7 class="text-right">0</h7>	
 		</div>
 		
 	</div>
