--- a/src/main/webapp/humanHeath/personInfoSet.zul
+++ b/src/main/webapp/humanHeath/personInfoSet.zul
@@ -1,11 +1,9 @@
 <zk xmlns:n="native">
     <nodom viewModel="@id('vm')@init('org.itri.view.humanhealth.PersonInfos')">
        <forEach items="@init(vm.states)">
-            <n:div sclass="col-md-12 p-1">
+            <n:div sclass="col-12 col-md-4 col-lg-4 p-1">
                 <person-info state="@init(each)"
-                           icon="@init(each.type)@converter('org.zkoss.admin.converter.TypeIconConverter')"
-                           color="@init(each.type)@converter('org.zkoss.admin.converter.TypeColorConverter')"
-                           statutIcon="@init(each.status)@converter('org.itri.converter.StatusIconConverter')"/>
+                             color="@init(each.type)@converter('org.zkoss.admin.converter.TypeColorConverter')"/>
             </n:div>
         </forEach>
     </nodom>
