--- a/src/main/webapp/humanHealthDetail/heartbeat.zul
+++ b/src/main/webapp/humanHealthDetail/heartbeat.zul
@@ -1,7 +1,7 @@
-<panel xmlns:n="native" title="心率" border="normal" height="100%"
-       viewModel="@id('vm')@init('org.itri.view.humanhealth.detail.HeartBeatView')" >
+<panel xmlns:n="native" title="心率" border="normal" height="100%" >
     <panelchildren>
-    	 <bs-row>
+
+ 		<bs-row>
             <n:div class="col-lg-1">
                 From
             </n:div>
@@ -18,10 +18,9 @@
                 <button label="查詢"/>
             </n:div>
          </bs-row>
-         <bs-row>
-            <n:div class="col-12">
-                <charts id="heartbeatchart" type="areaspline" hflex="1" title="心率"/>
-            </n:div>
-        </bs-row>
-    </panelchildren>
+         <window apply="org.itri.view.humanhealth.detail.HeartbeatView">
+			<charts id="chart" type="spline" marginRight="10" title="心率" />
+    		<timer id="timer" delay="1000" running="true" repeats="true" />
+		</window>
+	</panelchildren>
 </panel>
