--- a/src/main/webapp/resources/css/person-info.css
+++ b/src/main/webapp/resources/css/person-info.css
@@ -6,5 +6,5 @@
     border-bottom-color: #d9d9d9;
     border-left-color: var(--bs-color);
     border-style: solid;
-    background-color: white;
+    background-color: black;
 }
