add hibernate connection

--- a/src/main/webapp/humanCare.zul
+++ b/src/main/webapp/humanCare.zul
@@ -9,7 +9,7 @@
     	
     		<!-- Navigation -->
     	 	<n:div sclass="col-12">
-    	 		<div sclass="container" hflex="1">
+    	 		<div sclass="container-fluid" hflex="1">
     				<apply templateURI="longBar.zul" />
     			</div>
     		</n:div>
