--- a/src/main/webapp/WEB-INF/template/personInfoBox.zul
+++ b/src/main/webapp/WEB-INF/template/personInfoBox.zul
@@ -23,7 +23,7 @@
             	
             	<div class="row">
             		<!-- spo2 -->
-            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-Blood-oxygen-27g.png"/>
+            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-Blood oxygen-27b.png"/>
             		<h6 class="text-primary">血氧: </h6>
             		<h3 class="text-primary">${state.spo2}</h3>
             		<h6 class="text-primary"> mmHg</h6>
@@ -32,7 +32,7 @@
             	
             	<div class="row">
             		<!-- breathRate -->
-            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-caugh-27g.png"/>
+            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-caugh-27w.png"/>
             		<h6 class="text-white">呼吸: ${state.breathRate} 次/分</h6>
             		
             		<!-- bodyTemperature -->
