--- a/src/main/webapp/WEB-INF/template/personInfoBoxDetail.zul
+++ b/src/main/webapp/WEB-INF/template/personInfoBoxDetail.zul
@@ -6,7 +6,7 @@
             <div class="col-4 text-left">
             	<!-- Name -->
             	<h3 class="text-white">${state.name}</h3>
-              
+              	<h3 class="text-white">${state.bedRoom}</h3>
             </div>
         	
         	<!-- Right icon -->
@@ -14,27 +14,27 @@
             
             	<!-- heartBeat -->
             	<div class="row">
-            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-heart-27g.png"/>
-            		<h5 class="text-white">心跳: ${state.heartBeat} 次/分</h5>
+            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-heart-27r.png"/>
+            		<h3 class="text-danger">心跳: ${state.heartBeat} 次/分</h3>
             	</div>
             	
             	
             	<!-- bodyTemperature -->
             	<div class="row">
             		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-degree-27g.png"/>
-            		<h5 class="text-white">溫度: ${state.bodyTemperature} C</h5>
+            		<h5 class="text-success">溫度: ${state.bodyTemperature} C</h5>
             	</div>
             </div>
             <div class="col-4 px-1">
             	<!-- spo2 -->
             	<div class="row">
-            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-Blood-oxygen-27g.png"/>
-            		<h5 class="text-white">血氧: ${state.spo2} mmHg</h5>
+            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-Blood oxygen-27b.png"/>
+            		<h3 class="text-primary">血氧: ${state.spo2} mmHg</h3>
             	</div>
             	
             	<!-- breathRate -->
             	<div class="row">
-            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-caugh-27g.png"/>
+            		<image src="/cdc-hospital-bed/resources/image/MapImages/icon-caugh-27w.png"/>
             		<h5 class="text-white">呼吸: ${state.breathRate} 次/分</h5>
             	</div>
             </div>
