--- a/src/main/webapp/humanCare.zul
+++ b/src/main/webapp/humanCare.zul
@@ -4,29 +4,31 @@
 <?link rel="stylesheet" href="resources/css/zk-bootstrap.css" ?>
 
 <zk xmlns:n="native">
-    <hlayout viewModel="@id('vm')@init('org.itri.view.admin.MainView')" width="100%">
-    	<bs-row>
-    	
-    		<!-- Navigation -->
-    	 	<n:div sclass="col-12">
-    	 		<div sclass="container-fluid" hflex="1">
-    				<apply templateURI="longBar.zul" />
-    			</div>
-    		</n:div>
-    	
-    		<!-- floor : select floor-->
-    	 	<n:div sclass="col-12">
-    	 		<div sclass="container-fluid" hflex="1">
-    				<apply templateURI="floorMenu.zul" />
-    			</div>
-        	</n:div>
-        
-        	<!-- Main Page -->
-         	<n:div sclass="col-12">
-        		<div sclass="container-fluid" hflex="1">
-            		<apply templateURI="@load(vm.navigationModel.contentUrl)"/>
-        		</div>
-        	</n:div>
-    	</bs-row>
-    </hlayout>
+	<style>body { background-color: #000000; }</style> 
+	<hlayout viewModel="@id('vm')@init('org.itri.view.admin.MainView')"
+		width="100%">
+		<bs-row>
+			<!-- Navigation -->
+			<n:div sclass="col-12 container-fluid">
+				<div hflex="1">
+					<apply templateURI="longBar.zul" />
+				</div>
+			</n:div>
+
+			<!-- floor : select floor-->
+			<n:div sclass="col-12 container-fluid">
+				<div hflex="1">
+					<apply templateURI="floorMenu.zul" />
+				</div>
+			</n:div>
+
+			<!-- Main Page -->
+			<n:div sclass="col-12 container-fluid">
+				<div sclass="container-fluid" hflex="1">
+					<apply
+						templateURI="@load(vm.navigationModel.contentUrl)" />
+				</div>
+			</n:div>
+		</bs-row>
+	</hlayout>
 </zk>
