--- a/src/main/webapp/humanHealthDetail/breathRate.zul
+++ b/src/main/webapp/humanHealthDetail/breathRate.zul
@@ -19,7 +19,7 @@
             </n:div>
          </bs-row>
          <window apply="org.itri.view.humanhealth.detail.BreathRateView">
-			<charts id="chart" type="spline" marginRight="10" title="呼吸頻率" />
+			<charts id="chart" type="spline" title="呼吸頻率" />
     		<timer id="timer" delay="1000" running="true" repeats="true" />
 		</window>
 	</panelchildren>
