--- a/src/main/webapp/humanHealthDetail/temperature.zul
+++ b/src/main/webapp/humanHealthDetail/temperature.zul
@@ -1,25 +1,10 @@
-<panel xmlns:n="native" title="體溫" border="normal" height="100%" >
-    <panelchildren>
- 		<bs-row>
-            <n:div class="col-lg-1">
-                From
-            </n:div>
-            <n:div class="col-lg-2">
-                <datebox hflex="1"/>
-            </n:div>
-            <n:div class="col-lg-1">
-                To
-            </n:div>
-            <n:div class="col-lg-2">
-                <datebox hflex="1"/>
-            </n:div>
-            <n:div class="col-lg-1">
-                <button label="查詢"/>
-            </n:div>
-         </bs-row>
-         <window apply="org.itri.view.humanhealth.detail.TemperatureView">
-			<charts id="chart" type="spline" title="體溫" />
-    		<timer id="timer" delay="1000" running="true" repeats="true" />
+<panel xmlns:n="native" title="體溫" border="normal" height="100%">
+	<panelchildren>
+		<window
+			apply="org.itri.view.humanhealth.detail.TemperatureView">
+			<charts id="temperatureChart" type="spline" title="體溫"  marginRight="10" />
+			<timer id="timer" delay="1000" running="true"
+				repeats="true" />
 		</window>
 	</panelchildren>
 </panel>
