--- a/src/main/webapp/humanHealthDetail/heartbeat.zul
+++ b/src/main/webapp/humanHealthDetail/heartbeat.zul
@@ -1,26 +1,10 @@
-<panel xmlns:n="native" title="心率" border="normal" height="100%" >
-    <panelchildren>
-
- 		<bs-row>
-            <n:div class="col-lg-1">
-                From
-            </n:div>
-            <n:div class="col-lg-2">
-                <datebox hflex="1"/>
-            </n:div>
-            <n:div class="col-lg-1">
-                To
-            </n:div>
-            <n:div class="col-lg-2">
-                <datebox hflex="1"/>
-            </n:div>
-            <n:div class="col-lg-1">
-                <button label="查詢"/>
-            </n:div>
-         </bs-row>
-         <window apply="org.itri.view.humanhealth.detail.HeartBeatView">
+<panel xmlns:n="native" title="心率" border="normal" height="100%">
+	<panelchildren>
+		<window
+			apply="org.itri.view.humanhealth.detail.HeartBeatView">
 			<charts id="chart" type="spline" title="心率" />
-    		<timer id="timer" delay="1000" running="true" repeats="true" />
+			<timer id="timer" delay="1000" running="true"
+				repeats="true" />
 		</window>
 	</panelchildren>
 </panel>
