--- a/src/main/webapp/humanHealth/personInfoSet.zul
+++ b/src/main/webapp/humanHealth/personInfoSet.zul
@@ -1,21 +1,39 @@
 <zk xmlns:n="native">
-	<window apply="org.itri.view.humanhealth.PersonInfoView">
-		<nodom
-			viewModel="@id('vm')@init('org.itri.view.humanhealth.PersonInfos')">
-			<forEach items="@init(vm.dataList)">
-				<n:div sclass="col-12 col-lg-3 col-md-6 p-1">
-					<person-info state="@init(each)"
-						color="@init(each.type)@converter('org.zkoss.admin.converter.TypeColorConverter')" />
-				</n:div>
-			</forEach>
-		</nodom>
-		<timer id="timer1234" delay="3000" running="true" repeats="true" />
+	<nodom
+		viewModel="@id('vm')@init('org.itri.view.humanhealth.PersonInfos')">
+		<listbox model="@bind(vm.states)">
+			<template name="model">
+				<listitem>
+					<listcell>
+						<label value="@load(each.bedRoom)" />
+					</listcell>
+					<listcell>
+						<label value="@load(each.heartBeat)" />
+					</listcell>
+					<listcell>
+						<label value="@load(each.oximeter)" />
+					</listcell>
+					<listcell>
+						<label value="@load(each.breathRate)" />
+					</listcell>
+					<listcell>
+						<label value="@load(each.bodyTemperature)" />
+					</listcell>
+				</listitem>
+			</template>
+		</listbox>
 		<!-- 
-			<timer id="" delay="1000" repeats="true">
-			<attribute name="onTimer">
-			System.out.print("test");      
-			</attribute>
-			</timer> 
+			<forEach items="@bind(vm.states)">
+			<n:div sclass="col-12 col-lg-3 col-md-6 p-1">
+			
+			<person-info state="@load(each)"
+			color="@init(each.type)@converter('org.zkoss.admin.converter.TypeColorConverter')" />
+			
+			<label value="@load(each.heartBeat)" />
+			</n:div>
+			</forEach>
 		-->
-	</window>
+		<timer id="timer1234" delay="2000" running="true" repeats="true"
+			onTimer="@command('refreshInfo')" />
+	</nodom>
 </zk>
